// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`concurrent: A edits text, B → heading 1`] = `
"<blockGroup>
  <blockContainer id="block-hello">
    <paragraph backgroundColor="default" textAlignment="left" textColor="default">hello world</paragraph>
  </blockContainer>
</blockGroup>"
`;

exports[`concurrent: A edits text, B → heading 2`] = `
"<blockGroup>
  <blockContainer id="block-hello">
    <paragraph backgroundColor="default" textAlignment="left" textColor="default">hello universe</paragraph>
  </blockContainer>
</blockGroup>"
`;

exports[`concurrent: A edits text, B → heading 3`] = `
"<blockGroup>
  <blockContainer id="block-hello">
    <heading
      backgroundColor="default"
      isToggleable="false"
      level="1"
      textAlignment="left"
      textColor="default"
    >hello world</heading>
  </blockContainer>
</blockGroup>"
`;

exports[`concurrent: A edits text, B → heading 4`] = `
"<blockGroup>
  <blockContainer id="block-hello">
    <heading
      backgroundColor="default"
      isToggleable="false"
      level="1"
      textAlignment="left"
      textColor="default"
    >hello world</heading>
  </blockContainer>
</blockGroup>"
`;

exports[`concurrent: A edits text, B → heading 5`] = `
"<doc>
  <blockGroup>
    <y-attributed-delete userIds="B">
      <blockContainer id="block-hello">
        <y-attributed-delete userIds="B">
          <paragraph backgroundColor="default" textAlignment="left" textColor="default">
            <y-attributed-delete userIds="B">hello</y-attributed-delete>
            <y-attributed-delete userIds="A">wo</y-attributed-delete>
            <y-attributed-delete userIds="B">r</y-attributed-delete>
            <y-attributed-delete userIds="A">ld</y-attributed-delete>
          </paragraph>
        </y-attributed-delete>
      </blockContainer>
    </y-attributed-delete>
    <y-attributed-insert userIds="B">
      <blockContainer id="block-hello">
        <y-attributed-insert userIds="B">
          <heading
            backgroundColor="default"
            isToggleable="false"
            level="1"
            textAlignment="left"
            textColor="default"
          >
            <y-attributed-insert userIds="B">hello world</y-attributed-insert>
          </heading>
        </y-attributed-insert>
      </blockContainer>
    </y-attributed-insert>
  </blockGroup>
</doc>"
`;

exports[`concurrent: A → heading, B → list item 1`] = `
"<blockGroup>
  <blockContainer id="block-hello">
    <paragraph backgroundColor="default" textAlignment="left" textColor="default">hello world</paragraph>
  </blockContainer>
</blockGroup>"
`;

exports[`concurrent: A → heading, B → list item 2`] = `
"<blockGroup>
  <blockContainer id="block-hello">
    <heading
      backgroundColor="default"
      isToggleable="false"
      level="1"
      textAlignment="left"
      textColor="default"
    >hello world</heading>
  </blockContainer>
</blockGroup>"
`;

exports[`concurrent: A → heading, B → list item 3`] = `
"<blockGroup>
  <blockContainer id="block-hello">
    <bulletListItem
      backgroundColor="default"
      textAlignment="left"
      textColor="default"
    >hello world</bulletListItem>
  </blockContainer>
</blockGroup>"
`;

exports[`concurrent: A → heading, B → list item 4`] = `
"<blockGroup>
  <blockContainer id="block-hello">
    <heading
      backgroundColor="default"
      isToggleable="false"
      level="1"
      textAlignment="left"
      textColor="default"
    >hello world</heading>
  </blockContainer>
  <blockContainer id="block-hello">
    <bulletListItem
      backgroundColor="default"
      textAlignment="left"
      textColor="default"
    >hello world</bulletListItem>
  </blockContainer>
</blockGroup>"
`;

exports[`concurrent: A → heading, B → list item 5`] = `
"<doc>
  <blockGroup>
    <y-attributed-delete userIds="A">
      <blockContainer id="block-hello">
        <y-attributed-delete userIds="A">
          <paragraph backgroundColor="default" textAlignment="left" textColor="default">
            <y-attributed-delete userIds="A">hello world</y-attributed-delete>
          </paragraph>
        </y-attributed-delete>
      </blockContainer>
    </y-attributed-delete>
    <y-attributed-insert userIds="A">
      <blockContainer id="block-hello">
        <y-attributed-insert userIds="A">
          <heading
            backgroundColor="default"
            isToggleable="false"
            level="1"
            textAlignment="left"
            textColor="default"
          >
            <y-attributed-insert userIds="A">hello world</y-attributed-insert>
          </heading>
        </y-attributed-insert>
      </blockContainer>
    </y-attributed-insert>
    <y-attributed-insert userIds="B">
      <blockContainer id="block-hello">
        <y-attributed-insert userIds="B">
          <bulletListItem
            backgroundColor="default"
            textAlignment="left"
            textColor="default"
          >
            <y-attributed-insert userIds="B">hello world</y-attributed-insert>
          </bulletListItem>
        </y-attributed-insert>
      </blockContainer>
    </y-attributed-insert>
  </blockGroup>
</doc>"
`;
